first final commit

--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
 <body>
     <div class="heading">Welcome to the quiz game developed by - RD</div>
     <div class="container">
-        <div class="question">Who is the developer of World Wide Web (www) ?</div>
+        <div class="question">Who made this Website ?</div>
         <div class="options-container">
-            <div class="option">Dennis Rictie</div>
-            <div class="option">Rijan Dhakal</div>
-            <div class="option">Michel jackson</div>
-            <div class="option">Software enginer</div>
+            <div class="option one">Rijan Dhakal</div>
+            <div class="option two">Linus Torvals</div>
+            <div class="option three">Elon musk</div>
+            <div class="option four">ans : Chatgpt</div>
         </div>
         <button class="next">Next</button>
     </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
